--- a/descuentos.html
+++ b/descuentos.html
@@ -17,8 +17,8 @@
         <form>
             <label for="inputPrice">Escribe el precio de tu producto: </label>
             <input id="inputPrice" type="number"/>
-            <label for="inputDiscount">Escribe el descuento</label>
-            <input id="inputDiscount" type="number"/>
+            <label for="inputDiscount">Escribe el código de descuento</label>
+            <input id="inputDiscount" type="text"/>
             <button type="button" onclick="discountPrice()">Calcular el precio con descuento</button>
             <p id="resultPrice"></p>
         </form>
